[package]
name = "tokio-tungstenite"
description = "Tokio binding for Tungstenite, the Lightweight stream-based WebSocket implementation"
categories = ["web-programming::websocket", "network-programming", "asynchronous", "concurrency"]
keywords = ["websocket", "io", "web"]
authors = ["Daniel Abramov <dabramov@snapview.de>", "Alexey Galakhov <agalakhov@snapview.de>"]
license = "MIT"
homepage = "https://github.com/snapview/tokio-tungstenite"
documentation = "https://docs.rs/tokio-tungstenite/0.11.0"
repository = "https://github.com/snapview/tokio-tungstenite"
version = "0.12.0"
edition = "2018"

[features]
default = ["connect"]
connect = ["stream", "tokio/net"]
tls = ["native-tls", "tokio-native-tls", "stream", "tungstenite/tls"]
stream = []

[dependencies]
log = "0.4"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
pin-project = "1.0"
tokio = { version = "1.0.0", default-features = false, features = ["io-util"] }

[dependencies.tungstenite]
version = "0.12.0"
default-features = false

[dependencies.native-tls]
optional = true
version = "0.2.0"

[dependencies.tokio-native-tls]
optional = true
version = "0.3.0"

[dev-dependencies]
futures-channel = "0.3"
tokio = { version = "1.0.0", default-features = false, features = ["io-std", "macros", "rt-multi-thread", "time"] }
url = "2.0.0"
env_logger = "0.7"
