[package]
name = "tokio-tungstenite"
description = "Tokio binding for Tungstenite, the Lightweight stream-based WebSocket implementation"
categories = ["web-programming::websocket", "network-programming", "asynchronous", "concurrency"]
keywords = ["websocket", "io", "web"]
authors = ["Daniel Abramov <dabramov@snapview.de>", "Alexey Galakhov <agalakhov@snapview.de>"]
license = "MIT"
homepage = "https://github.com/snapview/tokio-tungstenite"
documentation = "https://docs.rs/tokio-tungstenite/0.15.0"
repository = "https://github.com/snapview/tokio-tungstenite"
version = "0.15.0"
edition = "2018"
include = ["examples/**/*", "src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[package.metadata.docs.rs]
features = ["native-tls", "__rustls-tls"]

[features]
default = ["connect"]
connect = ["stream", "tokio/net"]
native-tls = ["native-tls-crate", "tokio-native-tls", "stream", "tungstenite/native-tls"]
native-tls-vendored = ["native-tls", "native-tls-crate/vendored", "tungstenite/native-tls-vendored"]
rustls-tls-native-roots = ["__rustls-tls", "rustls-native-certs"]
rustls-tls-webpki-roots = ["__rustls-tls", "webpki-roots"]
__rustls-tls = ["rustls", "tokio-rustls", "stream", "tungstenite/__rustls-tls", "webpki"]
stream = []
deflate = ["tungstenite/deflate"]
# deflate-zlib = ["tungstenite/deflate-zlib"]

[dependencies]
log = "0.4"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
pin-project = "1.0"
tokio = { version = "1.0.0", default-features = false, features = ["io-util"] }

[dependencies.tungstenite]
git = "https://github.com/kazk/tungstenite-rs"
branch = "permessage-deflate"
default-features = false

[dependencies.native-tls-crate]
optional = true
package = "native-tls"
version = "0.2.7"

[dependencies.rustls]
optional = true
version = "0.19.0"

[dependencies.rustls-native-certs]
optional = true
version = "0.5.0"

[dependencies.tokio-native-tls]
optional = true
version = "0.3.0"

[dependencies.tokio-rustls]
optional = true
version = "0.22.0"

[dependencies.webpki]
optional = true
version = "0.21.4"

[dependencies.webpki-roots]
optional = true
version = "0.21.0"

[dev-dependencies]
futures-channel = "0.3"
tokio = { version = "1.0.0", default-features = false, features = ["io-std", "macros", "net", "rt-multi-thread", "time"] }
url = "2.0.0"
env_logger = "0.7"

[[example]]
name = "autobahn-client"
required-features = ["connect", "deflate"]

[[example]]
name = "autobahn-server"
required-features = ["deflate"]

[[example]]
name = "client"
required-features = ["connect"]
